# plugin.nih.polarity-sc-dark

./: .gitignore  Cargo.toml  README.md  bundler.toml
.github/workflows/: build.yml  readme-Linux.txt  readme-Windows.txt  readme-macOS.txt
framework/nih_plug/: Cargo.toml
framework/nih_plug/src/: util.rs
framework/nih_plug/src/buffer/: blocks.rs  samples.rs
framework/nih_plug/src/wrapper/: util.rs
framework/nih_plug/src/wrapper/standalone/: wrapper.rs
framework/nih_plug/src/wrapper/vst3/: context.rs
framework/nih_plug_derive/: Cargo.toml
framework/nih_plug_vizia/: Cargo.toml
framework/nih_plug_vizia/src/: editor.rs
framework/nih_plug_vizia/src/widgets/: generic_ui.rs  param_button.rs  param_slider.rs  peak_meter.rs  resize_handle.rs
framework/nih_plug_xtask/src/: lib.rs
plugin/: Cargo.toml
plugin/src/: analyzer.rs  compressor_bank.rs  curve.rs  curve_preset.rs  dry_wet_mixer.rs  editor.rs  frozen_ir.rs  lib.rs  main.rs  match_curve.rs  match_level.rs
plugin/src/editor/: analyzer.rs  delta_button.rs  export_ir_button.rs  match_button.rs  match_curve_button.rs  theme.css  theme.rs
