[package]
name = "polarity_sc_dark"
version = "0.5.2"
edition = "2021"
authors = ["Robbert van der Helm <mail@robbertvanderhelm.nl>", "Robert Polarity Agthe <hey@polarity.productions>"]
license = "GPL-3.0-or-later"

[lib]
crate-type = ["lib", "cdylib"]

[[bin]]
name = "polarity_sc_dark_standalone"
path = "src/main.rs"

[dependencies]
nih_plug = { path = "../framework/nih_plug", features = ["assert_process_allocs", "standalone"] }
nih_plug_vizia = { path = "../framework/nih_plug_vizia" }

realfft = "3.0"
hound = "3.5"
rfd = "0.15"

# For the GUI
atomic_float = "0.1"
atomic_refcell = "0.1"
crossbeam = "0.8"
open = "3.0"
serde = { version = "1.0", features = ["derive"] }
triple_buffer = "6.2"

[features]
# Read theme.css from disk at runtime so you can tweak it without recompiling.
# Close and reopen the editor window to pick up changes.
hot-reload = []
